Don't use Java 9 feature.